--- a/arcgishub.client/.gitignore
+++ b/arcgishub.client/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,5 +24,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-.vs/
+.vscode
+.vs
